# slambook2

./: .gitignore
ch2/: CMakeLists.txt  hello.cpp  hello.hpp  main.cpp
ch3/useEigen/: CMakeLists.txt  eigenMatrix.cpp
ch3/useGeometry/: CMakeLists.txt  eigenGeometry.cpp
ch3/visualizeGeometry/: CMakeLists.txt  visualizeGeometry.cpp
ch4/: CMakeLists.txt  useSophus.cpp
ch4/example/: trajectoryError.cpp
ch5/: CMakeLists.txt
ch5/imageBasics/: CMakeLists.txt  imageBasics.cpp  undistortImage.cpp
ch5/rgbd/: joinMap.cpp
ch5/stereo/: stereoVision.cpp
